# ycc-hull

./: .flake8  .gitattributes  .gitignore  .mypy.ini  .pylintrc  CHANGELOG.md  Dockerfile  GEN_models.py  README.md  TODO.md  config.json  docker-entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: ci.yml
conf/: config.json  logging.conf  logging.production.conf
db/: README.md  docker-compose.yml  export-form-local.orig.sql  export-form-local.sql  init-local.sql  schema-local.sql
db/init-local/: 1-create-ycclocal.sql  2-create-schema.sh
db/init-local/sql/: schema-local.sql  schema-local.sql.noautorun
docs/: user-roles.md
generated_entities/: entities_generated.py  pyproject.toml
generated_model/: models_generated.py  pyproject.toml
legacy/: orig.pl  password_hashing.pl  password_hashing.py  password_hashing2.py  rounds.pl  rounds.py  xy.pl
legacy-password-hashing/: README.md
legacy_password_hashing/: README.md  password_hashing.py  password_hashing_demo.pl
load_tests/: load_test_auth_utils.py  load_test_config.py  load_test_helpers.py  load_test_helpers_utils.py
scripts/: db_playground.py  email_playground.py
src/ycc_hull/: app_controllers.py  auth.py  config.py  constants.py  main.py  scheduler.py  utils.py
src/ycc_hull/api/: audit_log.py  boats.py  errors.py  helpers.py  holidays.py  licences.py  members.py
src/ycc_hull/controllers/: audit.py  audit_log_controller.py  base_controller.py  boats_controller.py  helpers_controller.py  holidays_controller.py  licences_controller.py  members_controller.py
src/ycc_hull/controllers/notifications/: email.py  email_content_utils.py  email_message_builder.py  format_utils.py  helpers_notifications_controller.py  notifications_controller.py  notifications_controller_orig.py  smtp.py
src/ycc_hull/db/: context.py  entities.py
src/ycc_hull/models/: audit_log_dtos.py  base.py  dtos.py  helpers_dtos.py  user.py
test-data/: Members.json  Users.json  generate-members.py  generate.py
test-data/original/: Boats.json  Holidays.json  MembershipTypes.json
test_data/: generate.py  generator.py  generator_config.py  playground.py
test_data/api/: test_data.py
test_data/controllers/: test_data_controller.py
test_data/exported/: BOATS_DATA_TABLE.json-formatted  HOLIDAYS_DATA_TABLE.json-formatted  INFOLICENCES_DATA_TABLE.json-formatted  MEMBERSHIP_DATA_TABLE.json-formatted
test_data/utils/: boats.py  helpers.py  holidays.py  licence_infos.py  licences.py  members.py
tests/: app_test.py  main_test.py  utils_camel_case_to_words_test.py  utils_deep_diff_test.py
tests/api/: test_helpers.py
tests/controllers/notifications/: test_format_utils.py
tests/model/: test_helpers_dtos.py  test_helpers_dtos_validation.py
tests/models/: test_base.py  test_helpers_dtos.py
ycc/hull/auth/: password_hashing.py
ycc_hull/: asgi.py  auth.py  config.py  constants.py  error.py  main.py  settings.py  urls.py  utils.py  wsgi.py
ycc_hull/api/: boats.py  dtos.py  errors.py  helpers.py  holidays.py  licences.py  main.py  members.py  test_data.py
ycc_hull/auth/: password_hashing.py
ycc_hull/controllers/: audit.py  base_controller.py  boats_controller.py  exceptions.py  helpers_controller.py  holidays_controller.py  licences_controller.py  members_controller.py  test_data_controller.py
ycc_hull/controllers/notifications/: email.py  notifications_controller.py
ycc_hull/db/: context.py  engine.py  entities.py  models.py  models_generated.py
ycc_hull/models/: base.py  config.py  dtos.py  helpers_dtos.py  user.py
ycc_hull_api/: apps.py  views.py
