[project]
name = "ycc-hull"
version = "1.1.1"
description = "YCC Hull Backend Service"
authors = [
    { name = "Lajos Cseppentő", email = "1053931+LajosCseppento@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # General
    "aiofiles>=24.1.0",
    "lxml[html_clean]>=5.3.1",
    "pyhumps>=3.8.0",
    "pytz>=2025.1",
    "toml>=0.10.2",

    # Auth
    "python-keycloak>=5.3.1",

    # E-mail
    "aiosmtplib>=4.0.0",

    # REST API
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",

    # DB
    "oracledb>=3.0.0",
    "SQLAlchemy[asyncio,mypy]>=2.0.39",
]

[tool.poetry]
packages = [{ include = "ycc_hull", from = "src" }]

[tool.poetry.group.dev.dependencies]
Faker = "^37.0.0"
httpx = "^0.28.1"
passlib = "^1.7.4"
sqlacodegen = "^3.0.0"
types-aiofiles = "^24.1.0.20241221"
types-lxml = "^2025.3.4"
types-passlib = "^1.7.7.20241221"
types-pytz = "^2025.1.0.20250204"
types-requests = "^2.32.0.20250306"
types-toml = "^0.10.8.20240310"

[tool.poetry.group.test.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
locust = "^2.33.2"
mypy = "^1.15.0"
pytest = "^8.3.5"
pylint = "^3.3.5"
pylint-pydantic = "^0.3.5"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
start = "ycc_hull.main:main"
generate-test-data = "test_data.generator:generate"
regenerate-test-data = "test_data.generator:regenerate"
playground = "test_data.playground:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
