[project]
name = "ycc-hull"
version = "1.2.0"
description = "YCC Hull Backend Service"
authors = [
    { name = "Lajos Cseppentő", email = "1053931+LajosCseppento@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # General
    "aiofiles>=24.1.0",
    "lxml[html_clean]>=5.3.1",
    "phonenumbers>=9.0.1",
    "pyhumps>=3.8.0",
    "pytz>=2025.1",
    "toml>=0.10.2",

    # Auth
    "python-keycloak>=5.3.1",

    # Notifications
    "aiosmtplib>=4.0.0",
    "apscheduler>=3.11.0",

    # REST API
    "fastapi>=0.115.11",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",

    # DB
    "oracledb>=3.0.0",
    "SQLAlchemy[asyncio,mypy]>=2.0.39",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*", "keycloak.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"

[tool.poetry]
packages = [{ include = "ycc_hull", from = "src" }]

[tool.poetry.group.dev.dependencies]
Faker = "^37.0.2"
black = "^25.1.0"
flake8 = "^7.1.2"
httpx = "^0.28.1"
isort = "^6.0.1"
mypy = "^1.15.0"
passlib = "^1.7.4"
pylint = "^3.3.6"
pylint-pydantic = "^0.3.5"
sqlacodegen = "^3.0.0"
types-aiofiles = "^24.1.0.20241221"
types-lxml = "^2025.3.4"
types-passlib = "^1.7.7.20250322"
types-pytz = "^2025.1.0.20250318"
types-requests = "^2.32.0.20250306"
types-toml = "^0.10.8.20240310"

[tool.poetry.group.test.dependencies]
locust = "^2.33.2"
pytest = "^8.3.5"
pylint = "^3.3.5"
pylint-pydantic = "^0.3.5"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.scripts]
start = "ycc_hull.main:main"
generate-test-data = "test_data.generator:generate"
regenerate-test-data = "test_data.generator:regenerate"
db-playground = "scripts.db_playground:main"
email-playground = "scripts.email_playground:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
